test/org/midica/testfiles/failing/soundbank-file-doesnt-exist.midica
INCLUDE inc/instruments.midica

SOUNDBANK  soundfont.sf2

0 c /4
